# Predator-SDR

./: .replit  CMakeLists.txt  index.html  readme.md  replit.md  replit.nix  server.py
.agents/: agent_assets_metadata.toml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: MainActivity.kt  MapActivity.kt
android/sdr-kit/: .gitattributes  README.md
android/sdr-kit/arm64-v8a/include/codec2/: version.h
android/sdr-kit/arm64-v8a/include/volk/: volk_machines.h
attached_assets/: Pasted--31-481-Building-CXX-object-decoder-modules-m17-decoder_1777784071363.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777784011261.txt  Pasted--Task-app-buildCMakeDebug-arm64-v8a-airspy-source-airsp_1777785013872.txt  Pasted--beginning-of-main-beginning-of-system-2026-05-10-08-56_1778444266050.txt  Pasted-Execution-failed-for-task-app-buildCMakeDebug-arm64-v8a_1777783860689.txt  Pasted-PS-C-Users-cjake-TEMP-Predator-RF-android-C-Users-cjake_1777784363489.txt
backend/: android_service.py  config.py  main.py
backend/coordination/: kujhad_client.py
backend/fusion/: proximity_estimator.py  track_manager.py
backend/models/: emitter_track.py  sensor_node.py
backend/persistence/: store.py
backend/sensor/hardware/: capability_inference.py
backend/tests/: test_kujhad_wire.py
core/backends/android/: android_backend.h  backend.cpp
core/backends/android/imgui/: imgui_impl_android.cpp
core/backends/glfw/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: backend.h  core.cpp
core/src/gui/: main_window.cpp  main_window.h  style.cpp  style.h
core/src/gui/menus/: display.cpp
core/src/predator/: cot_reporter.cpp  cot_reporter.h  hold_manager.h  kujhad_rns.h
decoder_modules/dsdfme_decoder/: CMakeLists.txt
decoder_modules/dsdfme_decoder/src/: main.cpp
decoder_modules/rtl433_decoder/src/: main.cpp
docs/: OPERATOR_GUIDE.md  PITCH_BLURB.md  android_build.md
misc_modules/scanner/src/: main.cpp
root/res/maps/: index.html
scripts/: fetch-sdr-kit.sh
source_modules/spectran_http_source/src/: spectran_http_client.cpp
tests/: hold_manager_test.cpp
